--- a/criar-login.css
+++ b/criar-login.css
@@ -60,18 +60,18 @@ header .logo-text {
 }
 
 header .logo a {
-    text-decoration: none; /* Remove o sublinhado do link */
-    display: flex; /* Garante que a logo e o texto fiquem alinhados */
-    align-items: center; /* Alinha a logo e o texto verticalmente */
+    text-decoration: none; 
+    display: flex; 
+    align-items: center; 
 }
 
 header .logo a img {
-    width: 40px; /* Tamanho da imagem da logo, ajustável conforme necessário */
+    width: 40px; 
     height: auto;
 }
 
 header .logo a:hover .logo-text {
-    color: #e8f7ff; /* Muda a cor do texto ao passar o mouse */
+    color: #e8f7ff; 
 }
 
 header .prev-btn {
