--- a/index.css
+++ b/index.css
@@ -69,7 +69,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    height: 15vh;
+    height: 10vh;
     text-align: center;
     padding-top: 20px;
 }
@@ -315,4 +315,10 @@
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.centered-text {
+    font-size: 2.5em;
+    color: #333;
+    margin: 0;
 }
